Fix the flickering issue when dragging files over the chat window

--- a/packages/ui/src/views/chatmessage/ChatMessage.css
+++ b/packages/ui/src/views/chatmessage/ChatMessage.css
@@ -119,14 +119,32 @@
 .cloud-dialog-wrapper {
     width: 400px;
     height: calc(100vh - 260px);
-    display: flex;
-    align-items: start;
-    justify-content: start;
-    flex-direction: column;
 }
 
 .cloud-dialog-wrapper {
     width: 100%;
+}
+
+.cloud-wrapper > div,
+.cloud-dialog-wrapper > div {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: start;
+    justify-content: start;
+    flex-direction: column;
+    position: relative;
+}
+
+.image-dropzone {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 2001; /* Ensure it's above other content */
 }
 
 .cloud,
